--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:31:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:32:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,6 +220,22 @@ E thru 14</td>
 -1 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -10
+-1 thru 11</td>
+      <td>Will Zalatoris -3
+-5 (F)</td>
+      <td>Shane Lowry -2
+E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td class="greyout leftborder">Tony Finau +6
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-15</td>
       <td>Scottie Scheffler -10
@@ -236,22 +252,6 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -10
--1 thru 11</td>
-      <td>Will Zalatoris -3
--5 (F)</td>
-      <td>Shane Lowry -2
-E thru 12</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
@@ -265,6 +265,38 @@ E thru 14</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
 +8 (F)</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-13</td>
+      <td>Scottie Scheffler -10
+-1 thru 11</td>
+      <td>Shane Lowry -2
+E thru 12</td>
+      <td>Corey Conners -1
+E thru 14</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler -10
+-1 thru 11</td>
+      <td>Rory McIlroy -6
+-7 thru 16</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -284,35 +316,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-12</td>
-      <td>Scottie Scheffler -10
--1 thru 11</td>
-      <td>Shane Lowry -2
-E thru 12</td>
-      <td>Corey Conners -1
-E thru 14</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler -10
--1 thru 11</td>
       <td>Rory McIlroy -6
 -7 thru 16</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
-      <td>Viktor Hovland +4
+      <td>Collin Morikawa -3
+-4 thru 16</td>
+      <td>Will Zalatoris -3
+-5 (F)</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +4
 +1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-12</td>
+      <td>Cameron Smith -7
+-1 thru 11</td>
+      <td>Will Zalatoris -3
+-5 (F)</td>
+      <td>Shane Lowry -2
+E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +2
+-2 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -332,35 +364,19 @@ E thru 14</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-11</td>
-      <td>Rory McIlroy -6
--7 thru 16</td>
-      <td>Collin Morikawa -3
--4 thru 16</td>
-      <td>Will Zalatoris -3
--5 (F)</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-11</td>
       <td>Cameron Smith -7
 -1 thru 11</td>
-      <td>Will Zalatoris -3
--5 (F)</td>
-      <td>Shane Lowry -2
-E thru 12</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +2
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td>Rory McIlroy(W) -6
+-7 thru 16</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Hideki Matsuyama +2
+E (F)</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -380,6 +396,22 @@ E thru 14</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-10</td>
+      <td>Rory McIlroy -6
+-7 thru 16</td>
+      <td>Will Zalatoris -3
+-5 (F)</td>
+      <td>Corey Conners -1
+E thru 14</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith -7
@@ -393,38 +425,6 @@ E thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -7
--1 thru 11</td>
-      <td>Rory McIlroy(W) -6
--7 thru 16</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
-      <td>Hideki Matsuyama +2
-E (F)</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-9</td>
-      <td>Rory McIlroy -6
--7 thru 16</td>
-      <td>Will Zalatoris -3
--5 (F)</td>
-      <td>Corey Conners -1
-E thru 14</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -509,18 +509,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -7
 -1 thru 11</td>
       <td>Corey Conners -1
 E thru 14</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Hideki Matsuyama +2
 E (F)</td>
       <td class="greyout leftborder">Marc Leishman +5
 +2 (F)</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-5</td>
+      <td>Rory McIlroy -6
+-7 thru 16</td>
+      <td>Collin Morikawa(W) -3
+-4 thru 16</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -540,19 +556,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-4</td>
-      <td>Rory McIlroy -6
--7 thru 16</td>
-      <td>Collin Morikawa(W) -3
--4 thru 16</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -7
+-1 thru 11</td>
+      <td>Shane Lowry -2
+E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -7
+-1 thru 11</td>
+      <td>Corey Conners -1
+E thru 14</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -588,22 +620,6 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -7
--1 thru 11</td>
-      <td>Shane Lowry -2
-E thru 12</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
-      <td>Viktor Hovland +4
-+1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -10
@@ -620,30 +636,14 @@ E thru 14</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -7
--1 thru 11</td>
-      <td>Corey Conners -1
-E thru 14</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
-      <td>Viktor Hovland +4
-+1 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -7
 -1 thru 11</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -653,13 +653,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Rory McIlroy -6
 -7 thru 16</td>
       <td>Corey Conners -1
 E thru 14</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -717,11 +717,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
@@ -733,11 +733,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Viktor Hovland +4
@@ -749,11 +749,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Rory McIlroy -6
 -7 thru 16</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay(W) +7
@@ -861,9 +861,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">14</td>
-      <td>Justin Thomas +1
-+2 thru 13</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Hideki Matsuyama +2
 E (F)</td>
       <td>Jon Rahm(W) +4
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">16</td>
-      <td>Justin Thomas(W) +1
-+2 thru 13</td>
+      <td class="bigbold">15</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
