--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:50:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:50:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -154,6 +154,22 @@ E thru 16</td>
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-17</td>
+      <td>Scottie Scheffler -10
+-1 thru 12</td>
+      <td>Shane Lowry -3
+-1 thru 14</td>
+      <td>Will Zalatoris -3
+-5 (F)</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
+      <td class="greyout leftborder">Tony Finau +6
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -188,22 +204,6 @@ E thru 16</td>
 -1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
-      <td>Scottie Scheffler -10
--1 thru 12</td>
-      <td>Shane Lowry -3
--1 thru 14</td>
-      <td>Will Zalatoris -3
--5 (F)</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
@@ -221,15 +221,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-15</td>
       <td>Rory McIlroy -7
 -8 (F)</td>
       <td>Collin Morikawa -4
 -5 (F)</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
+      <td>Justin Thomas -1
+E thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout">Tiger Woods(W) +13
@@ -237,15 +237,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler -10
 -1 thru 12</td>
       <td>Shane Lowry -3
 -1 thru 14</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
       <td>Corey Conners -1
 E thru 16</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
 -1 thru 12</td>
       <td>Rory McIlroy -7
 -8 (F)</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -332,6 +332,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-12</td>
+      <td>Rory McIlroy -7
+-8 (F)</td>
+      <td>Will Zalatoris -3
+-5 (F)</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
+      <td>Corey Conners -1
+E thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-11</td>
       <td>Scottie Scheffler -10
@@ -348,18 +364,18 @@ E thru 16</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-11</td>
-      <td>Rory McIlroy -7
--8 (F)</td>
+      <td>Cameron Smith -4
++2 thru 13</td>
+      <td>Shane Lowry -3
+-1 thru 14</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Corey Conners -1
-E thru 16</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 (F)</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +2
+-2 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -380,19 +396,19 @@ E thru 16</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-10</td>
+      <td>Rory McIlroy(W) -7
+-8 (F)</td>
       <td>Cameron Smith -4
 +2 thru 13</td>
-      <td>Shane Lowry -3
--1 thru 14</td>
-      <td>Will Zalatoris -3
--5 (F)</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +2
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td>Justin Thomas -1
+E thru 15</td>
+      <td>Hideki Matsuyama +2
+E (F)</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -412,30 +428,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-9</td>
-      <td>Rory McIlroy(W) -7
--8 (F)</td>
-      <td>Cameron Smith -4
-+2 thru 13</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
-      <td>Hideki Matsuyama +2
-E (F)</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Rory McIlroy -7
 -8 (F)</td>
       <td>Collin Morikawa(W) -4
 -5 (F)</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
+      <td>Justin Thomas -1
+E thru 15</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout leftborder">Tiger Woods +13
@@ -474,6 +474,22 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout">Jon Rahm +4
 -3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">-5</td>
+      <td>Rory McIlroy -7
+-8 (F)</td>
+      <td>Corey Conners -1
+E thru 16</td>
+      <td>Justin Thomas -1
+E thru 15</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -524,19 +540,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-4</td>
-      <td>Rory McIlroy -7
--8 (F)</td>
+      <td>Cameron Smith(W) -4
++2 thru 13</td>
       <td>Corey Conners -1
 E thru 16</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
+      <td>Justin Thomas -1
+E thru 15</td>
+      <td>Hideki Matsuyama +2
+E (F)</td>
+      <td class="greyout leftborder">Marc Leishman +5
++2 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
++2 thru 13</td>
+      <td>Shane Lowry -3
+-1 thru 14</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -556,22 +588,6 @@ E thru 16</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -4
-+2 thru 13</td>
-      <td>Corey Conners -1
-E thru 16</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
-      <td>Hideki Matsuyama +2
-E (F)</td>
-      <td class="greyout leftborder">Marc Leishman +5
-+2 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-3</td>
       <td>Rory McIlroy -7
@@ -588,35 +604,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
-+2 thru 13</td>
-      <td>Shane Lowry -3
--1 thru 14</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td>Viktor Hovland +4
-+1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -4
 +2 thru 13</td>
       <td>Corey Conners -1
 E thru 16</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
+      <td>Justin Thomas -1
+E thru 15</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -4
++2 thru 13</td>
+      <td>Will Zalatoris -3
+-5 (F)</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -649,22 +665,6 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -4
-+2 thru 13</td>
-      <td>Will Zalatoris -3
--5 (F)</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -717,11 +717,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Rory McIlroy -7
 -8 (F)</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
+      <td>Justin Thomas -1
+E thru 15</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay(W) +7
@@ -733,11 +733,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
@@ -749,11 +749,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
+      <td>Justin Thomas -1
+E thru 15</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Viktor Hovland +4
@@ -845,9 +845,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas -1
+E thru 15</td>
       <td>Hideki Matsuyama +2
 E (F)</td>
       <td>Jon Rahm(W) +4
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">15</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas(W) -1
+E thru 15</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
